--- a/packages/rettangoli-ui/pages/_includes/default-layout.html
+++ b/packages/rettangoli-ui/pages/_includes/default-layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/examples/theme.css" rel="stylesheet" />
+    <link href="/theme.css" rel="stylesheet" />
     <script src="/scripts/index.js"></script>
   </head>
 
