--- a/packages/rettangoli-ui/pages/specs/view/overflow/0001.html
+++ b/packages/rettangoli-ui/pages/specs/view/overflow/0001.html
@@ -30,4 +30,22 @@ tags: [test]
         <rtgl-view wh="20" bgc="suc"></rtgl-view>
         <rtgl-view wh="20" bgc="suc"></rtgl-view>
     </rtgl-view>
+
+    <rtgl-view bgc="sucl" g="xl" wh="100">
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view h="1" w="40"></rtgl-view>
+
+    <rtgl-view bgc="sucl" g="xl" wh="100" overflow="hidden">
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+        <rtgl-view wh="20" bgc="suc"></rtgl-view>
+    </rtgl-view>
 </rtgl-view>
