--- a/packages/rettangoli-ui/pages/specs/view/padding/0001.html
+++ b/packages/rettangoli-ui/pages/specs/view/padding/0001.html
@@ -82,4 +82,36 @@ tags: [test]
     <rtgl-view bgc="sucl" p="xl">
         <rtgl-view bgc="suc" wh="50"></rtgl-view>
     </rtgl-view>
+
+    <rtgl-view bgc="sucl" ph="xs">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" ph="s">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" ph="m">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" ph="l">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" ph="xl">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+
+    <rtgl-view bgc="sucl" pv="xs">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" pv="s">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" pv="m">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" pv="l">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
+    <rtgl-view bgc="sucl" pv="xl">
+        <rtgl-view bgc="suc" wh="50"></rtgl-view>
+    </rtgl-view>
 </rtgl-view>
