--- a/packages/rettangoli-ui/pages/_includes/default-layout.html
+++ b/packages/rettangoli-ui/pages/_includes/default-layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/public/theme.css" rel="stylesheet" />
     <script src="/scripts/index.js"></script>
   </head>
