--- a/packages/rettangoli-ui/pages/public/theme.css
+++ b/packages/rettangoli-ui/pages/public/theme.css
@@ -22,6 +22,7 @@ body {
   font-family: Roboto, -apple-system, "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 
