--- a/packages/rettangoli-ui/pages/specs/templates/landing/0001.html
+++ b/packages/rettangoli-ui/pages/specs/templates/landing/0001.html
@@ -30,7 +30,7 @@ tags: [test]
 
   <rtgl-view w="f" ah="c" av="c" h="100vh" g="l">
     <rtgl-text s="dm" at="c" mh="xl">Hero message long long</rtgl-text>
-    <rtgl-view w="400" s-w="300" style="align-self: unset;">
+    <rtgl-view w="400" s-w="300">
         <rtgl-text s="bl" c="on-su-v" at="c"
           >Lorem ipsum dolor sit, amet consectetur adipisicing elit Amet vel
           voluptate doloremque saepe iusto</rtgl-text
@@ -69,7 +69,7 @@ tags: [test]
     <rtgl-view flex="3" g="m" s-w="100vw" stretch>
       <rtgl-image src="/public/sample1.jpg" h="32"></rtgl-image>
       <rtgl-view flex="1"></rtgl-view>
-      <rtgl-view d="h" g="l" style="align-self: unset;">
+      <rtgl-view d="h" g="l">
           <rtgl-svg h-cur="p" svg="text" wh="20"></rtgl-svg>
           <rtgl-svg h-cur="p" svg="home" wh="20"></rtgl-svg>
           <rtgl-svg h-cur="p" svg="threeDots" wh="20"></rtgl-svg>
