feat: separate release for layout, ui, esm

--- a/packages/rettangoli-ui/pages/_includes/default-layout.html
+++ b/packages/rettangoli-ui/pages/_includes/default-layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/public/theme.css" rel="stylesheet" />
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/entry-ui.js"></script>
   </head>
 
   <body>
