--- a/apps/rettangoli.dev/pages/_includes/documentation.html
+++ b/apps/rettangoli.dev/pages/_includes/documentation.html
@@ -107,6 +107,19 @@ title: Rettangoli UI Docs
         max-width: 640px;
         width: 640px;
       }
+
+      table {
+          border: 2px solid var(--color-inverse-surface); /* White border around the table */
+          border-collapse: collapse; /* Ensures borders don't double up */
+      }
+
+      th, td {
+          text-align: left;
+          border: 2px solid var(--color-inverse-surface); /* White border around table cells */
+          padding: 8px; /* Adds spacing inside the cells */
+          text-align: left; /* Aligns text to the left */
+          color: var(--color-primary); /* Ensures text is visible */
+      }
     </style>
 
     <script>
