--- a/apps/rettangoli.dev/pages/_includes/documentation.html
+++ b/apps/rettangoli.dev/pages/_includes/documentation.html
@@ -120,6 +120,10 @@ title: Rettangoli UI Docs
           text-align: left; /* Aligns text to the left */
           color: var(--color-primary); /* Ensures text is visible */
       }
+
+      td a {
+        color: var(--color-primary);
+      }
     </style>
 
     <script>
